--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,5 +3,6 @@ fixtures:
     buildenv: https://github.com/camptocamp/puppet-buildenv.git
     concat: https://github.com/puppetlabs/puppetlabs-concat.git
     python: https://github.com/camptocamp/puppet-python.git
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
   symlinks:
     rdiff_backup: "#{source_dir}"
